2009-02-26  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Libraries/Hyena/Hyena.Query/AliasedObjectSet.cs: Move the ToLower
	call added in my previous commit outside of the loop. Let's not waste
	CPU cycles.

2009-02-26  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Libraries/Hyena/Hyena.Query/AliasedObjectSet.cs: Make search
	fields not case sensitive, so that "Search by Matching Album" works
	with german locale (BGO #573268).

2009-02-26  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Database/SortKeyUpdater.cs: Slightly
	nicer debug output.

2009-02-26  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Playlist/PlaylistFileUtil.cs:
	* src/Core/Banshee.Services/Banshee.Playlists.Formats/IPlaylistFormat.cs:
	* src/Core/Banshee.Services/Banshee.Playlists.Formats/PlaylistFormatBase.cs:
	* src/Core/Banshee.Services/Banshee.Playlists.Formats/PlaylistParser.cs:
	* src/Core/Banshee.Services/Banshee.Playlists.Formats/XspfPlaylistFormat.cs:
	* src/Core/Banshee.Services/Makefile.am:
	* src/Libraries/Mono.Media/Media.Playlists.Xspf/Playlist.cs:
	* src/Libraries/Mono.Media/Media.Playlists.Xspf/Track.cs:
	Patch from John Millikin adding support for importing and exporting XSPF
	playlist files (BGO #389537)

2009-02-26  Gabriel Burt  <gabriel.burt@gmail.com>

	Massive, awesomely-well-done patch by John Millikin adding proper support
	for unicode-compatibile, case-insensitive, current-culture-aware
	collation/sorting (BGO #499650)

	* src/Core/Banshee.Core/Banshee.Collection/AlbumInfo.cs:
	* src/Core/Banshee.Core/Banshee.Collection/ArtistInfo.cs:
	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs: Save
	String.Empty as null for *Sort properties.

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseAlbumInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseArtistInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs: